--- a/index.html
+++ b/index.html
@@ -150,5 +150,7 @@
 			<a href="#hero" class="back-to-top" aria-label="Back to top">↑</a>
 		</div>
 	</footer>
+
+	<script src="main.js"></script>
 </body>
 </html>
