--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <!-- Prueba: fuente desde CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="./assets/css/index.css">
     <script src="./assets/js/main.js" defer></script>
 </head>
@@ -81,6 +87,18 @@
 			</div>
 		</section>
 
+		<!-- Marquee Bar -->
+		<div class="marquee-bar">
+            <div class="marquee-container">
+                <span class="marquee-text">I DEVELOP & CREATE DIGITAL FUTURE</span>
+                <span class="marquee-text">I DEVELOP & CREATE DIGITAL FUTURE</span>
+                <span class="marquee-text">I DEVELOP & CREATE DIGITAL FUTURE</span>
+                <span class="marquee-text">I DEVELOP & CREATE DIGITAL FUTURE</span>
+                <span class="marquee-text">I DEVELOP & CREATE DIGITAL FUTURE</span>
+                <span class="marquee-text">I DEVELOP & CREATE DIGITAL FUTURE</span>
+            </div>
+        </div>
+
 		<!-- Projects Section -->
 		<section id="projects" class="section projects">
 			<div class="container">
@@ -153,4 +171,6 @@
 
 	<script src="main.js"></script>
 </body>
+
+
 </html>
