--- a/index.html
+++ b/index.html
@@ -102,51 +102,13 @@
 		<!-- Projects Section -->
 		<section id="projects" class="projects">
 			<h2 class="section-title animate-on-scroll">Projects</h2>
-			<div class="project-card large" data-title="Proyecto Uno" data-desc="Descripción del proyecto uno">
-				<img src="https://picsum.photos/500/600" alt="Proyecto Uno" />
-			</div>
-
-			<div class="project-card small" data-title="Proyecto Dos" data-desc="Descripción del proyecto dos">
-				<img src="https://picsum.photos/400/300" alt="Proyecto Dos" />
-			</div>
-
-			<div class="project-card medium" data-title="Proyecto Tres" data-desc="Descripción del proyecto tres">
-				<img src="https://picsum.photos/450/500" alt="Proyecto Tres" />
-			</div>
-
-			<div class="project-card small" data-title="Proyecto Cuatro" data-desc="Descripción del proyecto cuatro">
-				<img src="https://picsum.photos/350/400" alt="Proyecto Cuatro" />
-			</div>
-
-			<div class="project-card medium" data-title="Proyecto Cinco" data-desc="Descripción del proyecto cinco">
-				<img src="https://picsum.photos/480/520" alt="Proyecto Cinco" />
-			</div>
-
-			<div class="project-card large" data-title="Proyecto Seis" data-desc="Descripción del proyecto seis">
-				<img src="https://picsum.photos/520/650" alt="Proyecto Seis" />
-			</div>
-
-			<div class="project-card small" data-title="Proyecto Siete" data-desc="Descripción del proyecto siete">
-				<img src="https://picsum.photos/380/350" alt="Proyecto Siete" />
-			</div>
-
-			<div class="project-card medium" data-title="Proyecto Ocho" data-desc="Descripción del proyecto ocho">
-				<img src="https://picsum.photos/460/510" alt="Proyecto Ocho" />
-			</div>
-		</section>
-
-		<!-- MODAL -->
-		<div class="modal" id="modal">
-			<div class="modal-content">
-				<button class="close">✕</button>
-				<h2 id="modal-title"></h2>
-				<p id="modal-desc"></p>
-			</div>
+		<div class="projects-grid">
 		</div>
+	</section>
 
-		<!-- Contact Section -->
-		<section id="contact" class="section contact">
-			<div class="container">
+	<!-- Contact Section -->
+	<section id="contact" class="section contact">
+		<div class="container">
 				<h2 class="section-title animate-on-scroll">Get In Touch</h2>
 				<div class="contact-content animate-on-scroll">
 					<p>Interested in working together? Let's talk about your project.</p>
