--- a/index.html
+++ b/index.html
@@ -99,15 +99,46 @@
             </div>
         </div>
 
-		<!-- Projects Section -->
-		<section id="projects" class="projects">
-			<h2 class="section-title animate-on-scroll">Projects</h2>
-		<div class="projects-grid">
+<!-- Projects Hero Section -->
+	<section id="projects" class="projects-hero">
+		<!-- Micro-texto en bordes -->
+		<div class="micro-text top-left">Design Portfolio 2026</div>
+		<div class="micro-text bottom-left">Selected Works</div>
+		<div class="micro-text right-side">Scroll to explore</div>
+		
+		<!-- Título central (z-index: 2) -->
+	<h1 class="title-projects-hero">PROJECTS</h1>
+		<!-- Sistema de capas de imágenes -->
+		<div class="hero-images">
+			<!-- Imagen A: Fondo superior izquierda (z-index: 1) -->
+			<div class="hero-img img-a">
+				<img src="https://picsum.photos/500/600?1" alt="Background">
+			</div>
+			
+			<!-- Imagen B: Inferior central, sobre el texto (z-index: 3) -->
+			<div class="hero-img img-b">
+				<img src="https://picsum.photos/400/300?2" alt="Overlay">
+			</div>
+			
+			<!-- Imagen C: Extremo derecho superior, vertical (z-index: 2) -->
+			<div class="hero-img img-c">
+				<img src="https://picsum.photos/280/500?3" alt="Lateral">
+			</div>
+			
+			<!-- Imagen E: Centro superior (z-index: 2) -->
+			<div class="hero-img img-e">
+				<img src="https://picsum.photos/320/380?5" alt="Center Top">
+			</div>
+			
+			<!-- Imagen D: Pequeña flotando cerca del título (z-index: 3) -->
+			<div class="hero-img img-d">
+				<img src="https://picsum.photos/200/250?4" alt="Detail">
+			</div>
 		</div>
 	</section>
 
-	<!-- Contact Section -->
-	<section id="contact" class="section contact">
+<!-- Contact Section -->
+<section id="contact" class="section contact">
 		<div class="container">
 				<h2 class="section-title animate-on-scroll">Get In Touch</h2>
 				<div class="contact-content animate-on-scroll">
