--- a/index.html
+++ b/index.html
@@ -102,39 +102,60 @@
 <!-- Projects Hero Section -->
 	<section id="projects" class="projects-hero">
 		<!-- Micro-texto en bordes -->
-		<div class="micro-text top-left">Design Portfolio 2026</div>
-		<div class="micro-text bottom-left">Selected Works</div>
-		<div class="micro-text right-side">Scroll to explore</div>
 		
-		<!-- Título central (z-index: 2) -->
+
 	<h1 class="title-projects-hero">PROJECTS</h1>
 		<!-- Sistema de capas de imágenes -->
 		<div class="hero-images">
-			<!-- Imagen A: Fondo superior izquierda (z-index: 1) -->
+		    <!-- olympics -->
 			<div class="hero-img img-a">
-				<img src="https://picsum.photos/500/600?1" alt="Background">
+				<video autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
+					<source src="https://ik.imagekit.io/cohwnscdit/06_POSTERSMOCKUP.mp4" type="video/mp4">
+
+				</video>
 			</div>
+
 			
-			<!-- Imagen B: Inferior central, sobre el texto (z-index: 3) -->
+			<!-- totebag -->
 			<div class="hero-img img-b">
-				<img src="https://picsum.photos/400/300?2" alt="Overlay">
+				<img src="https://ik.imagekit.io/cohwnscdit/Captura%20de%20pantalla%202026-01-05%20122730.png" alt="Overlay">
 			</div>
 			
-			<!-- Imagen C: Extremo derecho superior, vertical (z-index: 2) -->
+			<!-- Rosalía -->
 			<div class="hero-img img-c">
-				<img src="https://picsum.photos/280/500?3" alt="Lateral">
+				<img src="https://ik.imagekit.io/cohwnscdit/Captura%20de%20pantalla%202026-01-05%20112336.png" alt="Lateral">
 			</div>
 			
-		<!-- Imagen E: Centro superior (z-index: 2) -->
+		<!-- youth -->
 		<div class="hero-img img-e">
-			<img src="https://picsum.photos/320/380?5" alt="Center Top">
+			<img src="https://ik.imagekit.io/cohwnscdit/IMG_2950.jpeg" alt="Center Top">
 		</div>
-		
-			<!-- Imagen D: Pequeña flotando cerca del título (z-index: 3) -->
-			<div class="hero-img img-d">
-				<img src="https://picsum.photos/200/250?4" alt="Detail">
-			</div>
+
+		<!-- alt -->
+		<div class="hero-img img-f">
+			<video autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
+				<source src="https://ik.imagekit.io/cohwnscdit/PRESENTACI%C3%93N%20VIDEO%20(1).mp4" type="video/mp4">
+				
+			</video>
 		</div>
+
+		<!-- Chica azul -->
+		<div class="hero-img img-g">
+			<img src="https://ik.imagekit.io/cohwnscdit/IMG_2948.jpeg" alt="Left Center">
+		</div>
+
+		<!-- grabado-->
+		<div class="hero-img img-h">
+			<img src="https://ik.imagekit.io/cohwnscdit/IMG_9049.png" alt="Right Middle">
+		</div>
+
+		<!-- labios-->
+		<div class="hero-img img-k">
+			<img src="https://ik.imagekit.io/cohwnscdit/IMG_2952.jpeg" alt="Bottom Right">
+		</div>
+
+	
+	</div>
 	</section>
 
 <!-- Contact Section -->
