--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 			<a href="#" class="nav-logo">Portfolio</a>
 			<ul class="nav-links">
 				<li><a href="#hero">Home</a></li>
+				<li><a href="#about">About Me</a></li>
 				<li><a href="#services">Services</a></li>
 				<li><a href="#projects">Projects</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
+			<button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false"></button>
 		</div>
 	</nav>
 
@@ -39,15 +41,41 @@
 			<div class="hero-content">
 				<div class="hero-text-group">
 					<a href="#projects" class="btn-cta hero-cta animate-on-scroll">View My Work</a>
-					<p class="hero-description">I am a designer and visual storyteller, blending illustration, motion, and digital experiences to craft work that captivates and inspires. My projects range from dynamic audiovisual pieces to bold visual identities, all rooted in creative exploration and conceptual thinking. With a focus on originality and emotion, I aim to transform ideas into striking visuals that connect with audiences across screens and mediums. Every project is an opportunity to experiment, challenge boundaries, and shape stories that leave a lasting impression.</p>
+					<p class="hero-description">I am a visual designer and storyteller, blending illustration, motion, and digital experiences to create work that captivates and inspires. My projects transform ideas into striking visuals that connect with audiences across screens and mediums.</p>
 				</div>
-				<h1 class="hero-title animate-on-scroll">ANA&nbsp;PEREZ</h1>
+				<h1 class="hero-title animate-on-scroll">ANA PEREZ</h1>
 			</div>
 			<div class="scroll-indicator">
 				<span>Scroll</span>
 				<div class="scroll-arrow"></div>
 			</div>
 		</section>
+
+	<!-- About Section -->
+	<section id="about" class="about-split">
+		<div class="about-image">
+			<img src="https://ik.imagekit.io/cohwnscdit/IMG_9051.jpeg" alt="About image">
+		</div>
+
+		<div class="about-panel">
+			<h2>About Me</h2>
+
+			<div class="about-avatar">
+				<img src="https://ik.imagekit.io/cohwnscdit/IMG_2985.jpeg" alt="Portrait">
+			</div>
+
+			<p>
+				I am a visual designer working across illustration, motion and digital
+				experiences. My work focuses on expressive visuals that connect concept,
+				emotion and contemporary culture.
+			</p>
+
+			<p>
+				Through experimentation and visual storytelling, I create bold narratives
+				that translate ideas into meaningful and striking digital pieces.
+			</p>
+		</div>
+	</section>
 
 	<!-- Projects Hero Section -->
 	<section id="projects" class="projects-hero">
