--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="hero-content">
 				<div class="hero-text-group">
 					<a href="#projects" class="btn-cta hero-cta animate-on-scroll">View My Work</a>
-					<p class="hero-description">I am a visual designer and storyteller, blending illustration, motion, and digital experiences to create work that captivates and inspires. My projects transform ideas into striking visuals that connect with audiences across screens and mediums.</p>
+				
 				</div>
 				<h1 class="hero-title animate-on-scroll">ANA PEREZ</h1>
 			</div>
@@ -153,7 +153,7 @@
 		<div class="services-container">
 			<div class="services-header">
 				<span class="services-label">SERVICES</span>
-				<h2 class="services-title">WHAT CAN I DO</h2>
+				<h2 class="services-title">AREAS OF PRACTICE</h2>
 			</div>
 			<div class="services-accordion">
 				<div class="service-item">
@@ -223,20 +223,65 @@
 	</section>
 
 <!-- Contact Section -->
-<section id="contact" class="section contact">
-		<div class="container">
-				<h2 class="section-title animate-on-scroll">Get In Touch</h2>
-				<div class="contact-content animate-on-scroll">
-					<p>Interested in working together? Let's talk about your project.</p>
-					<a href="mailto:hello@example.com" class="btn btn-primary">Say Hello</a>
-					<div class="social-links">
-						<a href="#" aria-label="GitHub">GitHub</a>
-						<a href="#" aria-label="LinkedIn">LinkedIn</a>
-						<a href="#" aria-label="Twitter">Twitter</a>
-					</div>
+<section id="contact" class="contact-section">
+	<div class="contact-container">
+
+		<!-- LEFT INFO -->
+		<div class="contact-info">
+			<h2>Get in touch</h2>
+
+			<div class="contact-item">
+				<span>Email:</span>
+				<p>yourname@gmail.com</p>
+			</div>
+
+			<div class="contact-item">
+				<span>Phone:</span>
+				<p>+34 600 000 000</p>
+			</div>
+
+			<div class="contact-item">
+				<span>Address:</span>
+				<p>
+					123 Innovation Avenue, Suite 456<br>
+					Tech District, City, Country
+				</p>
+			</div>
+
+			<div class="contact-socials">
+				<span>Follow me</span>
+				<div class="icons">
+					<a href="#">IG</a>
+					<a href="#">BE</a>
+					<a href="#">LI</a>
 				</div>
 			</div>
-		</section>
+		</div>
+
+		<!-- RIGHT FORM -->
+		<form class="contact-form">
+			<div class="form-row">
+				<div class="form-group">
+					<label>Your name</label>
+					<input type="text" placeholder="Your name">
+				</div>
+
+				<div class="form-group">
+					<label>Email address</label>
+					<input type="email" placeholder="Your email address">
+				</div>
+			</div>
+
+			<div class="form-group">
+				<label>Message</label>
+				<textarea placeholder="Write something..."></textarea>
+			</div>
+
+			<button type="submit" class="btn-cta">Send Message</button>
+		</form>
+
+	</div>
+</section>
 	</main>
 
 	<!-- Footer -->
