--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- Navigation -->
 	<nav class="nav">
 		<div class="nav-container">
-			<a href="#" class="nav-logo">Portfolio</a>
+			<a href="#" class="nav-logo">Creative Portfolio</a>
 			<ul class="nav-links">
 				<li><a href="#hero">Home</a></li>
 				<li><a href="#about">About Me</a></li>
@@ -250,10 +250,10 @@
 
 			<div class="contact-socials">
 				<span>Follow me</span>
-				<div class="icons">
-					<a href="#">IG</a>
-					<a href="#">BE</a>
-					<a href="#">LI</a>
+				<div class="follow-me">
+				  <a href="https://instagram.com" target="_blank">IG</a>
+				  <a href="https://behance.net" target="_blank">BE</a>
+				  <a href="https://tiktok.com" target="_blank">TT</a>
 				</div>
 			</div>
 		</div>
@@ -285,11 +285,23 @@
 	</main>
 
 	<!-- Footer -->
-	<footer class="footer">
-		<div class="container">
-			<p>&copy; 2025 Jane Developer. Built with vanilla HTML, CSS & JS.</p>
-			<a href="#hero" class="back-to-top" aria-label="Back to top">↑</a>
-		</div>
+	<footer class="editorial-footer">
+	  <div class="footer-top">
+	    <h2>Let's work<br>together</h2>
+	  </div>
+
+	  <div class="footer-bottom">
+	    <div class="footer-info">
+	      <p>© 2026 Ana Pérez Asensio</p>
+	      <span>Audiovisual Designer & Illustrator</span>
+	    </div>
+
+	    <div class="footer-social">
+	      <a href="https://instagram.com" target="_blank">IG</a>
+	      <a href="https://behance.net" target="_blank">BE</a>
+	      <a href="https://tiktok.com" target="_blank">TT</a>
+	    </div>
+	  </div>
 	</footer>
 
 	<script src="main.js"></script>
