--- a/404.html
+++ b/404.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" href="./assets/css/404.css">
 </head>
 <body>
+	<video class="bg-video" autoplay muted loop playsinline>
+		<source src="./assets/videos/404-bg.mp4" type="video/mp4">
+		<source src="./assets/videos/404-bg.webm" type="video/webm">
+	</video>
 	<div class="error-container">
 		<div class="zero-wrapper">
 			<span>4</span>
