--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/modal.css">
     <script src="./assets/js/main.js" defer></script>
+    <script src="./assets/js/modal.js" defer></script>
 </head>
 <body>
 	<!-- Skip link for accessibility -->
