--- a/404.html
+++ b/404.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 	<video class="bg-video" autoplay muted loop playsinline>
-		<source src="./assets/videos/404-bg.mp4" type="video/mp4">
-		<source src="./assets/videos/404-bg.webm" type="video/webm">
+		<source src="https://ik.imagekit.io/cohwnscdit/Transition%2005.mp4?updatedAt=1767951183934" type="video/mp4">
 	</video>
 	<div class="error-container">
 		<div class="zero-wrapper">
@@ -20,7 +19,10 @@
 			</span>
 			<span>4</span>
 		</div>
-		<div class="subtitle">Page not found</div>
+		<div class="subtitle">
+			<p>This page slipped out of the frame before it was ready to be seen.</p>
+			<p>Some ideas stay behind the scenes — this one is one of them.</p>
+		</div>
 		<a href="index.html" class="back-link">GO BACK HOME</a>
 	</div>
 
