--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Creative Portfolio</title>
     
     <!-- Prueba: fuente desde CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -81,10 +81,10 @@
 
 	<!-- Projects Hero Section -->
 	<section id="projects" class="projects-hero">
-		<!-- Micro-texto en bordes -->
 		
 
-	<h1 class="title-projects-hero">PROJECTS</h1>
+		<h1 class="title-projects-hero"> my work</h1>
+		
 		<!-- Sistema de capas de imágenes -->
 		<div class="hero-images">
 		    <!-- olympics -->
