--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 			</video>
 			<div class="hero-content">
 				<div class="hero-text-group">
-					<a href="#projects" class="btn-cta hero-cta animate-on-scroll">View My Work</a>
+					<div class="hero-description">Audiovisual designer & illustrator. I create expressive visuals that connect concept, emotion and culture.</div>
+					<a href="#projects" class="btn-cta hero-cta animate-on-scroll">VIEW MY WORK</a>
 				
 				</div>
 				<h1 class="hero-title animate-on-scroll">ANA PEREZ</h1>
@@ -89,49 +90,55 @@
 		<div class="hero-images">
 		    <!-- olympics -->
 			<div class="hero-img img-a">
-				<video autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
-					<source src="https://ik.imagekit.io/cohwnscdit/06_POSTERSMOCKUP.mp4" type="video/mp4">
-
-				</video>
+				   <video autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
+					   <source src="https://ik.imagekit.io/cohwnscdit/06_POSTERSMOCKUP.mp4" type="video/mp4">
+				   </video>
+				<span class="project-hover-text"><span class="btn-cta">Click to see more</span></span>
 			</div>
 
 			
 			<!-- totebag -->
 			<div class="hero-img img-b">
-				<img src="https://ik.imagekit.io/cohwnscdit/Captura%20de%20pantalla%202026-01-05%20122730.png" alt="Overlay">
+				   <img src="https://ik.imagekit.io/cohwnscdit/Captura%20de%20pantalla%202026-01-05%20122730.png" alt="Overlay">
+				   <span class="project-hover-text">Click to see more</span>
 			</div>
 			
 			<!-- Rosalía -->
 			<div class="hero-img img-c">
-				<img src="https://ik.imagekit.io/cohwnscdit/Captura%20de%20pantalla%202026-01-05%20112336.png" alt="Lateral">
+				   <img src="https://ik.imagekit.io/cohwnscdit/Captura%20de%20pantalla%202026-01-05%20112336.png" alt="Lateral">
+				   <span class="project-hover-text">Click to see more</span>
 			</div>
 			
 		<!-- youth -->
 		<div class="hero-img img-e">
-			<img src="https://ik.imagekit.io/cohwnscdit/IMG_2950.jpeg" alt="Center Top">
+			   <img src="https://ik.imagekit.io/cohwnscdit/IMG_2950.jpeg" alt="Center Top">
+			   <span class="project-hover-text">Click to see more</span>
 		</div>
 
 		<!-- alt -->
 		<div class="hero-img img-f">
-			<video autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
-				<source src="https://ik.imagekit.io/cohwnscdit/PRESENTACI%C3%93N%20VIDEO%20(1).mp4" type="video/mp4">
-				
-			</video>
+			   <video autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
+				   <source src="https://ik.imagekit.io/cohwnscdit/PRESENTACI%C3%93N%20VIDEO%20(1).mp4" type="video/mp4">
+			   </video>
+			   <span class="project-hover-text">Click to see more</span>
 		</div>
 
 		<!-- Chica azul -->
 		<div class="hero-img img-g">
-			<img src="https://ik.imagekit.io/cohwnscdit/IMG_2948.jpeg" alt="Left Center">
+			   <img src="https://ik.imagekit.io/cohwnscdit/IMG_2948.jpeg" alt="Left Center">
+			   <span class="project-hover-text">Click to see more</span>
 		</div>
 
 		<!-- grabado-->
 		<div class="hero-img img-h">
-			<img src="https://ik.imagekit.io/cohwnscdit/IMG_9049.png" alt="Right Middle">
+			   <img src="https://ik.imagekit.io/cohwnscdit/IMG_9049.png" alt="Right Middle">
+			   <span class="project-hover-text">Click to see more</span>
 		</div>
 
 		<!-- labios-->
 		<div class="hero-img img-k">
-			<img src="https://ik.imagekit.io/cohwnscdit/IMG_2952.jpeg?updatedAt=1767615331789" alt="Bottom Right">
+			   <img src="https://ik.imagekit.io/cohwnscdit/IMG_2952.jpeg?updatedAt=1767615331789" alt="Bottom Right">
+			   <span class="project-hover-text">Click to see more</span>
 		</div>
 
 	
