--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>404 – Page Not Found</title>
+	<link rel="icon" type="image/svg+xml" href="https://ik.imagekit.io/cohwnscdit/Frame%203.svg">
 	<link rel="stylesheet" href="./assets/css/404.css">
 </head>
 <body>
