--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Portfolio</title>
+	<link rel="icon" type="image/svg+xml" href="https://ik.imagekit.io/cohwnscdit/Frame%203.svg">
     
     <!-- Prueba: fuente desde CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,13 +23,15 @@
 	<!-- Navigation -->
 	<nav class="nav">
 		<div class="nav-container">
-			<a href="#" class="nav-logo">Creative Portfolio</a>
+			<a href="#" class="nav-logo" aria-label="Home">
+				<img src="https://ik.imagekit.io/cohwnscdit/Frame%203.svg" alt="Creative Portfolio Logo" style="height:3.6rem; width:auto; display:block;" />
+			</a>
 			<ul class="nav-links">
-				<li><a href="#hero">Home</a></li>
-				<li><a href="#about">About Me</a></li>
-				<li><a href="#services">Services</a></li>
-				<li><a href="#projects">Projects</a></li>
-				<li><a href="#contact">Contact</a></li>
+				   <li><a href="#hero">Home</a></li>
+				   <li><a href="#about">About Me</a></li>
+				   <li><a href="#projects">Projects</a></li>
+				   <li><a href="#services">Services</a></li>
+				   <li><a href="#contact">Contact</a></li>
 			</ul>
 			<button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false"></button>
 		</div>
@@ -100,19 +103,19 @@
 			<!-- totebag -->
 			<div class="hero-img img-b">
 				   <img src="https://ik.imagekit.io/cohwnscdit/Captura%20de%20pantalla%202026-01-05%20122730.png" alt="Overlay">
-				   <span class="project-hover-text">Click to see more</span>
+				   <span class="project-hover-text"><span class="btn-cta">Click to see more</span></span>
 			</div>
 			
 			<!-- Rosalía -->
 			<div class="hero-img img-c">
 				   <img src="https://ik.imagekit.io/cohwnscdit/Captura%20de%20pantalla%202026-01-05%20112336.png" alt="Lateral">
-				   <span class="project-hover-text">Click to see more</span>
+				   <span class="project-hover-text"><span class="btn-cta">Click to see more</span></span>
 			</div>
 			
 		<!-- youth -->
 		<div class="hero-img img-e">
 			   <img src="https://ik.imagekit.io/cohwnscdit/IMG_2950.jpeg" alt="Center Top">
-			   <span class="project-hover-text">Click to see more</span>
+			   <span class="project-hover-text"><span class="btn-cta">Click to see more</span></span>
 		</div>
 
 		<!-- alt -->
@@ -120,25 +123,25 @@
 			   <video autoplay muted loop playsinline preload="auto" crossorigin="anonymous">
 				   <source src="https://ik.imagekit.io/cohwnscdit/PRESENTACI%C3%93N%20VIDEO%20(1).mp4" type="video/mp4">
 			   </video>
-			   <span class="project-hover-text">Click to see more</span>
+			   <span class="project-hover-text"><span class="btn-cta">Click to see more</span></span>
 		</div>
 
 		<!-- Chica azul -->
 		<div class="hero-img img-g">
 			   <img src="https://ik.imagekit.io/cohwnscdit/IMG_2948.jpeg" alt="Left Center">
-			   <span class="project-hover-text">Click to see more</span>
+			   <span class="project-hover-text"><span class="btn-cta">Click to see more</span></span>
 		</div>
 
 		<!-- grabado-->
 		<div class="hero-img img-h">
 			   <img src="https://ik.imagekit.io/cohwnscdit/IMG_9049.png" alt="Right Middle">
-			   <span class="project-hover-text">Click to see more</span>
+			   <span class="project-hover-text"><span class="btn-cta">Click to see more</span></span>
 		</div>
 
 		<!-- labios-->
 		<div class="hero-img img-k">
 			   <img src="https://ik.imagekit.io/cohwnscdit/IMG_2952.jpeg?updatedAt=1767615331789" alt="Bottom Right">
-			   <span class="project-hover-text">Click to see more</span>
+			   <span class="project-hover-text"><span class="btn-cta">Click to see more</span></span>
 		</div>
 
 	
